--- a/index (2).html
+++ b/index (2).html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- Main-style -->
-    <link rel="stylesheet" href="css/daniels.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="overlay"></div>
